@@ -379,6 +379,7 @@ enum cmd_and_opt_values
     oNoAutoKeyRetrieve,
     oAutoKeyImport,
     oNoAutoKeyImport,
+    oAutoKeyUpload,
     oUseAgent,
     oNoUseAgent,
     oGpgAgentInfo,
@@ -808,6 +809,7 @@ static gpgrt_opt_t opts[] = {
   ARGPARSE_s_n (oNoAutoKeyImport, "no-auto-key-import", "@"),
   ARGPARSE_s_n (oAutoKeyRetrieve, "auto-key-retrieve", "@"),
   ARGPARSE_s_n (oNoAutoKeyRetrieve, "no-auto-key-retrieve", "@"),
+  ARGPARSE_s_n (oAutoKeyUpload, "auto-key-upload", "@"),
   ARGPARSE_s_n (oIncludeKeyBlock, "include-key-block",
                 N_("include the public key in signatures")),
   ARGPARSE_s_n (oNoIncludeKeyBlock, "no-include-key-block", "@"),
@@ -3605,6 +3607,8 @@ main (int argc, char **argv)
 	  case oNoAutoKeyRetrieve:
             opt.keyserver_options.options &= ~KEYSERVER_AUTO_KEY_RETRIEVE;
             break;
+
+          case oAutoKeyUpload: opt.flags.auto_key_upload = 1; break;
 
 	  case oShowOnlySessionKey:
             opt.show_only_session_key = 1;
