@@ -38,7 +38,11 @@ struct keyserver_spec *parse_keyserver_uri (const char *string,
                                             int require_scheme);
 struct keyserver_spec *parse_preferred_keyserver(PKT_signature *sig);
 int keyserver_any_configured (ctrl_t ctrl);
+
 gpg_error_t keyserver_export (ctrl_t ctrl, strlist_t users, int assume_new_key);
+gpg_error_t keyserver_export_pubkey (ctrl_t ctrl, PKT_public_key *pk,
+                                     int assume_new_key);
+
 gpg_error_t keyserver_import (ctrl_t ctrl, strlist_t users, unsigned int flags);
 int keyserver_import_fpr (ctrl_t ctrl, const byte *fprint,size_t fprint_len,
                           struct keyserver_spec *keyserver,
