@@ -286,6 +286,8 @@ struct
     unsigned int disable_signer_uid:1;
     unsigned int include_key_block:1;
     unsigned int auto_key_import:1;
+    /* Option to upload new or modified keys to an LDAP server.  */
+    unsigned int auto_key_upload:1;
     /* Flag to enable experimental features from RFC4880bis.  */
     unsigned int rfc4880bis:1;
     /* Hack: --output is not given but OUTFILE was temporary set to "-".  */
@@ -445,6 +447,7 @@ EXTERN_UNLESS_MAIN_MODULE int memory_stat_debug_mode;
 #define EXPORT_REVOCS                    (1<<11)
 #define EXPORT_MODE1003                  (1<<12)
 #define EXPORT_REALCLEAN                 (1<<13)
+#define EXPORT_NO_STATUS                 (1<<20) /*Do not emit status lines.*/
 
 #define LIST_SHOW_PHOTOS                 (1<<0)
 #define LIST_SHOW_POLICY_URLS            (1<<1)
@@ -487,6 +490,8 @@ EXTERN_UNLESS_MAIN_MODULE int memory_stat_debug_mode;
 #define KEYSERVER_AUTO_KEY_RETRIEVE      (1<<3)
 #define KEYSERVER_HONOR_KEYSERVER_URL    (1<<4)
 #define KEYSERVER_UPDATE_BEFORE_SEND     (1<<5)
+#define KEYSERVER_LDAP_ONLY              (1<<6) /* Use only LDAP servers.  */
+#define KEYSERVER_WARN_ONLY              (1<<7) /* no error - just warn.   */
 
 
 #endif /*G10_OPTIONS_H*/
